--- a/im-2310/a2/e1/index.html
+++ b/im-2310/a2/e1/index.html
@@ -9,12 +9,23 @@
         <link rel="stylesheet" href="style.css">
 
         <script src="script.js"></script>
+
+        <title> A2 Experiement1</title>
     
     </head>
 
     <body>
 
-        <h1>Test Test</h1>
+        <div id="background">
+            
+            <div id="a" class="Margin">K</div>
+            <div id="b" class="Margin">E</div>
+            <div id="c" class="Margin">L</div>
+            <div id="d" class="Margin">L</div>
+            <div id="e" class="Margin">Y</div>
+            <div id="f" class="Margin">Wireframe Experiement</div>
+
+        </div>
 
     </body>
 
