--- a/im-2310/a2/e4/index.html
+++ b/im-2310/a2/e4/index.html
@@ -31,6 +31,10 @@
         <button class="video-control-button" id="playButton"></button>
 
         <button class="video-control-button" id="muteButton"></button>
+        <!-- This is a new button we created on the class, which can mute the sound of the video, but the video is still working in progress. -->
+        
+        <button class="video-control-button" id="fastForwardButton"></button>
+        <!-- Here is a fastForward button I created for the extra featrue for the video.-->
 
         <progress class="video-progress-bar" id="progressBar" value="0"></progress>
 
