--- a/im-2310/a3/index.html
+++ b/im-2310/a3/index.html
@@ -18,7 +18,7 @@
 
       <h1>K-pop Boom</h1>
       
-      <button id="load-link" onclick="loadPageAfterDelay(10000, './index.html')">Click to Collection Page</button>
+      <button id="load-link" onclick="loadPageAfterDelay(10000, './K-popboom.html')">Click to Collection Page</button>
       
       <div id="load-throbber"></div>
 
